--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT= 1473
 SECRET_TYPE=manhleosecret
 APP_NAME=Hung Store
 APP_LINK=http://localhost:3001
+DB_HOST=
+DB_USERNAME=
+DB_NAME=
+DB_PASSWORD=
