--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
 PORT= 1473
 SECRET_TYPE=manhleosecret
 APP_NAME=Hung Store
-APP_LINK=http://localhost:3001
-DB_HOST=
-DB_USERNAME=
-DB_NAME=
-DB_PASSWORD=
+APP_LINK=https://hungstore-frontend.vercel.app
