--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
+  },
+  "engines" : {
+    "node" : "^10"
   },
   "author": "",
   "license": "ISC",
