--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT= 1473
 SECRET_TYPE=manhleosecret
 APP_NAME=Hung Store
 APP_LINK=https://hungstore-frontend.vercel.app
+EMAIL=hungpv2811@gmail.com
+PASSWORD=dyir nbpz jzjh axod
