--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ SECRET_TYPE=manhleosecret
 APP_NAME=Hung Store
 APP_LINK=https://hungstore-frontend.vercel.app
 EMAIL=hungpv2811@gmail.com
-PASSWORD=dyir nbpz jzjh axod
+PASSWORD=jejq jwqb ojuj teqm
